[package]
name = "Plume"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.9", features = ["mysql"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
